# web2llm

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini
tests/: conftest.py  test_cli.py  test_converter.py  test_document_merging.py  test_downloader.py  test_preprocessor.py  test_svg_handling.py  test_tabbed_content.py
web2llm/: __init__.py  __main__.py  converter.py  downloader.py  preprocessor.py
